# grow_box

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  linker_script.ld
controller_pcb/: controller_pcb.kicad_pro  controller_pcb.kicad_sch  fp-info-cache
controller_pcb/digikey/kicad_mod/: CONV_IRM-01-5.kicad_mod  EE25TNU.kicad_mod
controller_pcb/digikey/kicad_sym/: EE2-5TNUH-L.kicad_sym  IRM-01-5.kicad_sym
libstm32g0/: CMakeLists.txt  Makefile
libstm32g0/include/: gpio.h
libstm32g0/src/: gpio.c
pcb/: #auto_saved_files#  pcb.kicad_pro  pcb.kicad_sch
pcb/digikey/kicad_sym/: 12402012E212A.kicad_sym
relay_pcb/: #auto_saved_files#  fp-info-cache  fp-lib-table  relay_pcb.kicad_pcb  relay_pcb.kicad_prl  relay_pcb.kicad_pro  relay_pcb.kicad_sch  sym-lib-table
src/: CMakeLists.txt  log.c  log.h  main.c
vendor_eda_models/: 12402012E212A_AMP.kicad_mod  1935174.kicad_sym  1935174.step  703W-00_52.kicad_sym  APT2012ZGCK.kicad_sym  APT2012ZGCK.step  CONN_1935174_PXC.kicad_mod  CONN_1990009.kicad_mod  CONN_1990009.kicad_sym  LED_APT2012ZGCK.kicad_mod  PHOENIX_1984963.kicad_mod  QUALTEK_703W-00_52.kicad_mod
vendor_eda_models/vendor_eda.pretty/: 12402012E212A_AMP.kicad_mod  CONN_1935161_PXC.kicad_mod  CONN_1935174_PXC.kicad_mod  CONN_1990009.kicad_mod  EE25TNU.kicad_mod  LED_APT2012ZGCK.kicad_mod  PHOENIX_1984963.kicad_mod  QUALTEK_703W-00_52.kicad_mod
